fix size buttons tickets on mobile

--- a/app/components/shows/show.module.css
+++ b/app/components/shows/show.module.css
@@ -107,7 +107,7 @@
     font-size: 20px;
     background-color: #F9F9F9;
     color: black;
-    padding: 8px 0 8px 0 ;
+    padding: 6px 0 6px 0 ;
     border-radius: 5px;
     transition: background-color 0.5s ease;
     text-align: center;
